tests/baselines/reference/typeParameterFixingWithContextSensitiveArguments2.errors.txt
tests/cases/compiler/typeParameterFixingWithContextSensitiveArguments2.ts(7,30): error TS2322: Type 'A' is not assignable to type 'B'.
  Property 'b' is missing in type 'A'.


==== tests/cases/compiler/typeParameterFixingWithContextSensitiveArguments2.ts (1 errors) ====
    function f<T, U>(y: T, y1: U, p: (z: U) => T, p1: (x: T) => U): [T, U] { return [y, p1(y)]; }
    interface A { a: A; }
    interface B extends A { b; }
    
    var a: A, b: B;
    
    var d = f(a, b, x => x, x => x); // A => A not assignable to A => B
                                 ~
!!! error TS2322: Type 'A' is not assignable to type 'B'.
!!! error TS2322:   Property 'b' is missing in type 'A'.
!!! related TS6502 tests/cases/compiler/typeParameterFixingWithContextSensitiveArguments2.ts:1:51: The expected type comes from the return type of this signature.